Using now built-in Base64 class instead of javax DatatypeConverter
I don't know why javax was being used in 'Base64 -> BufferedImage' process instead of the built-in Base64 class which IS in 'BufferedImage -> Base64' processing.